# pyketch

./: .gitignore  README.md  pyproject.toml
dash/: main.py
django/: manage.py  pyketch-panel.html
django/assets/jupyter-lite/: jupyter-lite.json
django/assets/pyscripts/: current_time.py  get_mol.py  script.py  set_mol.py  set_molecule.py
django/assets/templates/: base.html
django/ketch/: apps.py  urls.py  views.py
django/ketch/templates/: ketcher_app.html  ketcher_jupyter.html  pyketch-panel.html
django/pyketch_django/: asgi.py  settings.py  urls.py  wsgi.py
slides/: README.md  slides.md
slides/unused/: add_pypi_chython_package.html  slides.md
